--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
     --dark-blue:#242635;
     --lighty-blue: #34B0BE;
     --ligthy-gray: #D1CECA;
-    --whity: #FFFFFF;
+    --whity: #ffffff;
 }
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
@@ -20,23 +20,25 @@ body{
     font-size: 1rem;
     color: var(--whity);
     text-align: center;
+    padding: 0 1rem 1rem 1rem;
 }
 .nav{
     height: 80px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    position: relative;
 }
 .nav-Icono{
-    width: 35px;
-    margin: 1rem 2rem;
+    width: 30px;
+    margin: 1rem -2rem;
     border-radius: 10%;
     font-family: 'Montserrat', sans-serif;
     font-size: 32px;
-    
+    position: fixed;
 }
 .nav-menu{
-    position: absolute;
+    position: relative;
     background-color:#242635;
     width: 100%;
     top: 80px;
@@ -88,7 +90,7 @@ a{
     display: flex;  
     align-content: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
     flex-direction: column;
     margin-bottom: 1rem;
     text-align: center;
@@ -128,14 +130,14 @@ a{
     margin-bottom: 1rem;
 }
 .imagen{
-    width: 350px;
-    height: 350px;
+    width: 250px;
+    height: 250px;
     background-color: rgb(66, 68, 84);
     border-radius: 50%;
     margin: 0 auto;
 }
 .foto{
-    width: 230px;
+    width: 175px;
 }
 .cuentas{     /* Cuentas de google y mas */
     display: flex;
@@ -226,11 +228,52 @@ footer>div{
     font-size: 20px;
     margin: 2rem;
 }
+.habilitis{
+    width: 300px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+}
+.barra {
+    width: 300px;
+    height: 10px;
+    background-color:rgba(255,255,255,0.7);
+    border-radius: 10px;
+    margin: 1rem;
+   
+}
+.progreso{
+    width:var(--w);
+    height: 100%;
+    background-color: var(--lighty-blue);
+    border-radius: 10px;
+   animation: Aumentar 5s ease;
+}
+@keyframes Aumentar{
+    0%{width: 0%;}
+    100%{width: var(--w);}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*responcive*/
 
 @media screen and (min-width: 768px) {
     .nav-Icono{
-        display: none;
+       display: none;
     }
     .nav-menu{
         left: 0;
@@ -241,13 +284,14 @@ footer>div{
         margin-right: 2rem;
         gap: 2rem;
         transition: none;
+        position: fixed;
+        background-color: var(--dark-blue);
+        z-index: 100;
     }
-    .nav-Item:hover{
+    a:hover{
         color: var(--lighty-blue);
     }
-    .nav-Icono:hover{
-        cursor: pointer;
-    }
+   
     
 
 
@@ -266,8 +310,8 @@ footer>div{
         position: relative;
         align-items: center;
         justify-content: center;
-       flex-direction: row;
-       margin: 2rem 15rem 2rem -10rem;
+       flex-direction: row-reverse;
+       margin: .25rem 15rem 2rem -10rem;
        padding: 0;
         z-index: auto;
     }
@@ -275,22 +319,22 @@ footer>div{
         position:relative;
         display: flow-root;
         text-align: left;
-        margin-left: -53rem;
+        margin-left: 30rem;
     }
     .imagen{
         position: relative;
-        width: 35rem;
-        height: 35rem;
-        padding-left: 0;
-        margin: 0; 
+        width: 23rem;
+        height: 23rem;
+        padding-left:0;
+        margin-left: 0rem; 
 
     }
     .foto{
-        width: 400px;
+        width: 270px;
     }
     .cuentas{
     max-width: 900px;
-    height: 150px;
+    height: 135px;
     position: relative;
     margin: 0 0 3rem 15rem;
     }
@@ -345,7 +389,7 @@ footer>div{
         align-items: center;
         justify-content: space-between;
         margin: 1rem 0 1rem 15rem;
-        max-width: 900px;
+        max-width: 800px;
         font-size: 18px;
     }
     .foot-img{
