--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
     --dark-blue:#242635;
     --lighty-blue: #34B0BE;
     --ligthy-gray: #D1CECA;
-    --whity: #ffffff;
+    --whity: #FFFFFF;
 }
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
@@ -17,28 +17,40 @@ body{
     background-color: var(--dark-blue);
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-    font-size: 1rem;
+    font-size: 1.25rem;
     color: var(--whity);
-    text-align: center;
-    padding: 0 1rem 1rem 1rem;
+}
+h1{
+    color: var(--lighty-blue);
+    font-size: 40px;
+}
+h3{
+    font-size: 25px;
+}
+.link{
+    text-decoration: none;
+    color: var(--whity);
+}
+.link:hover{
+    color: var(--lighty-blue);
+    cursor: pointer;
 }
 .nav{
     height: 80px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    position: relative;
 }
 .nav-Icono{
-    width: 30px;
-    margin: 1rem -2rem;
+    width: 35px;
+    margin: 1rem 2rem;
     border-radius: 10%;
     font-family: 'Montserrat', sans-serif;
     font-size: 32px;
-    position: fixed;
+    
 }
 .nav-menu{
-    position: relative;
+    position: absolute;
     background-color:#242635;
     width: 100%;
     top: 80px;
@@ -61,348 +73,342 @@ body{
 #btn-menu:checked ~ .nav-menu{/* selecciones de hermanos generales busca nav menu mientras que btn menueste seleccionado*/
    left: 0;
 }
-.nav-Item:hover{
-    color: var(--lighty-blue);
-    cursor: pointer;
+.container{
+    margin: 1rem auto;
+    max-width: 350px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
-h1{
-    color: var(--lighty-blue);
-    font-size: 3rem;
-    font-weight: 600;
+.header-information{
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: center;
 }
-h2{
-    color: var(--lighty-blue);
-    font-size: 2rem;
-    font-weight: 600;
+.container-img{
+    background-color: gray;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    
 }
-h3{
-    font-size: 2rem;
-    font-weight: 600;
+.foto{
+    height: 100%;
+}
+.header-h1{
+    border-bottom: var(--ligthy-gray) solid 2px;
+   
+}
+
+.parrafo{
+    padding: 1rem;
+}
+.text-acent{
+    color: var(--lighty-blue);
+    padding: 1rem;
+}
+.social-container{
+    justify-content: space-around;
+    flex-direction: row;
+    display: flex;
+    padding-top: 0.25rem;
+}
+.social-icon{
+    background-color: var(--ligthy-gray);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    padding-top: .5rem;
+}
+.cuentas{
+    min-width: 300px;
+    background-color: gray;
+    justify-content: space-around;
+    width: 100%;
+    padding: 1rem;
+    border-radius: 10px;
+    margin: 1rem auto;
+
+}
+.cuentas-icon{
+    height: 50px;
+    width: 70px;
+    border-radius: 10px;
+    background-color: var(--ligthy-gray);
+}
+.icon{
+    height: 100%;
+    padding: .25rem .5rem;
+}
+.main{
+    display: flex;
+    flex-direction: column;
+    margin: 3rem auto;
+    width: 100%;
+    text-align: center;
+}
+.main-about{
+    text-align: center;
+    margin-top: 3rem;
+}
+.main-servis{
+    text-align: center;
+    margin-top: 6rem;
+    width: 100%;
+}
+.sevis-img{
+    display: flex;
+    flex-direction: row;
+    margin: 3rem auto;
+    gap: 3rem;
+    overflow-x: scroll;
+}
+.serv{
+    background-color: var(--whity);
+    width: 350px;
+    height: 250px;
+    color: gray;
+    border-radius: 10px;
+    padding: 1rem;
+}
+.img-services{
+    width: 80px;
 }
 h4{
     color: black;
 }
-a{
-    color: var(--whity);
-    text-decoration: none;
-}
-.header-information{  /* Seccion contiene nombre imagen y redes sosciales*/
-    display: flex;  
-    align-content: center;
+.main-habilitis{
+    width: 100%;
+    height: 80vh;
+    display: flex;
     justify-content: center;
-    gap: 1rem;
     flex-direction: column;
-    margin-bottom: 1rem;
-    text-align: center;
+    align-items: center;
+    margin: 0 auto;
 }
-#icon{
-    width: 50px;
-    height: 50px;
-    padding: 6px;
-    background-color: var(--ligthy-gray);
-    text-align: center;
-    border-radius: 50%;
+.habilidades{
+    width: 100%;
+}
+.barra {
+    width: 100%;
+    height: 10px;
+    background-color: rgba(255,255,255,0.7);
+    border-radius: 10px;
+    margin: 1rem auto;
 }
 
-.header-text{ 
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-.social-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    max-width: 350px;
-    gap: 2rem;
-    margin: 0 auto;
-    margin-bottom: 1rem;
-}
-.text-acent{
-    color: var(--lighty-blue);
-}
-.parrafo{
-    margin-bottom: 1rem;
-}
-.header-h1{
-    border-bottom: var(--whity) solid 2px;
-    width: 300px;
-    margin-bottom: 1rem;
-}
-.imagen{
-    width: 250px;
-    height: 250px;
-    background-color: rgb(66, 68, 84);
-    border-radius: 50%;
-    margin: 0 auto;
-}
-.foto{
-    width: 175px;
-}
-.cuentas{     /* Cuentas de google y mas */
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    background-color: rgb(66, 68, 84);
-    border-radius: 10px;
-    padding: 20px 5px;
-}
-#icon2{
-    width: 100px;
-    height: 60px;
-    background-color: var(--ligthy-gray);
-    text-align: center;
-    border-radius: 10px;
-    padding: .25rem;
-}
-.icon2{
-    width: 50px;
-}
-/* Seccion main el cuerpo de la pagina */
-.main{
-    display: flex;  
-    align-content: center;
-    justify-content: center;
-    gap: 2rem;
-    flex-direction: column;
-    margin: 4rem 2rem;
-    text-align: center;
-}
-.services-container{
-    display: flex;
-    flex-direction: row;
-    overflow-x: scroll;
-    gap: 1rem;
-}
-.serv{
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    text-align: center;
-    height: 300px;
-    min-width: 250px;
-    background-color: var(--whity);
+.progreso {
+    width: var(--w);
+    height: 100%;
+    background-color: var(--lighty-blue);
     border-radius: 10px;
 }
-.serv>p{
-    margin: 1rem;
-    color: black;
-}
-.img-services{
-    width: 100px;
+
+.main-portafolio{
+   flex-direction: column;
+   width: 100%;
 }
 .portafolio{
     display: flex;
     flex-direction: row;
+    max-width: 400px;
+    height: 250px; 
+    margin: 3rem auto;
+    gap: 1.5rem;
     overflow-x: scroll;
-    gap: 1rem;
-    height: 300px;
 }
-.emeplo{
-    width: 300px;
+.img-port{
+    width: 225px;
 }
-/* Footer*/
-footer{
+.foot{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    width: 100%;
     align-items: center;
-    margin: 2rem;
-    gap: 2rem;
+    justify-content: center;
+    margin: 0 auto;
+    text-align: center;
 }
-footer>div{
-    width: 250px;
-    height: 200px;
-    gap: 2rem;
-    background-color: var(--whity);
-    color: black;
-    border-radius: 10px;
-    padding: .5rem;
+.footer-img{
+    max-width: 100%;
+    margin: 2rem auto;
+    justify-content: space-between;
 }
+
 .foot-img{
-    padding: .25rem;
-    height: 85px;
+    width: 80px;
+}
+.contact{
+    background-color: var(--ligthy-gray);
+    height: 200px;
+    width: 100%;
+    margin: 2rem auto;
+    font-size: 18px;
+    padding: 1rem;
+    border-radius: 10px;
+    color: gray;
 }
 .last-text{
     color: var(--lighty-blue);
-    font-size: 20px;
-    margin: 2rem;
-}
-.habilitis{
-    width: 300px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-}
-.barra {
-    width: 300px;
-    height: 10px;
-    background-color:rgba(255,255,255,0.7);
-    border-radius: 10px;
     margin: 1rem;
-   
-}
-.progreso{
-    width:var(--w);
-    height: 100%;
-    background-color: var(--lighty-blue);
-    border-radius: 10px;
-   animation: Aumentar 5s ease;
-}
-@keyframes Aumentar{
-    0%{width: 0%;}
-    100%{width: var(--w);}
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-/*responcive*/
-
-@media screen and (min-width: 768px) {
-    .nav-Icono{
-       display: none;
-    }
-    .nav-menu{
-        left: 0;
-        flex-direction: row;
-        top: 0;
-        min-height: 80px;
-        justify-content: end;
-        margin-right: 2rem;
-        gap: 2rem;
-        transition: none;
-        position: fixed;
-        background-color: var(--dark-blue);
-        z-index: 100;
-    }
-    a:hover{
-        color: var(--lighty-blue);
-    }
-   
-    
-
-
-
-
-    h1{
-        font-size: 60px;
-    }
-    h2,h3,h4{
-        font-size: 30px;
-    }
-    body{
-        font-size: 18px;
-    }
-    .header-information{
-        position: relative;
+@media screen and (min-width: 668px) {
+    .container{
+        margin: 1rem auto;
+        max-width: 600px;
+        height: auto;
+        display: flex;
         align-items: center;
         justify-content: center;
-       flex-direction: row-reverse;
-       margin: .25rem 15rem 2rem -10rem;
-       padding: 0;
-        z-index: auto;
-    }
-    .header-text{
-        position:relative;
-        display: flow-root;
-        text-align: left;
-        margin-left: 30rem;
-    }
-    .imagen{
-        position: relative;
-        width: 23rem;
-        height: 23rem;
-        padding-left:0;
-        margin-left: 0rem; 
-
-    }
-    .foto{
-        width: 270px;
-    }
-    .cuentas{
-    max-width: 900px;
-    height: 135px;
-    position: relative;
-    margin: 0 0 3rem 15rem;
-    }
-    .header-h1{
-        margin: 1.5rem 0;
-        border-bottom: none;
-    }
-    .header-h3{
-        margin-top: 0;
-        margin-bottom: 1.5rem;
-        border-bottom: var(--whity) solid 2px;
-    }
-    .parrafo{
-        margin: 3rem 0;
-    }
-    #icon{
-        width: 60px;
-        height: 60px;
-        padding: 6px;
-    }
-    .icon{
-        width: 100px;
-    }
-    #icon2{
-        width: 200px;
-        height: 90px;
-    }
-    .icon2{
-        width: 80px;
-    }
-    .main{
-        margin: 5rem 15rem 4rem 15rem;
         text-align: center;
     }
-    .services-container{
-        overflow: hidden;
-        gap: 2rem;
+    .container-img{
+        background-color: gray;
+        width: 400px;
+        height: 400px;
+        border-radius: 50%;
+        
+    }
+    .cuentas{
+        justify-content: space-around;
+        width: 50%;
+        padding: 1rem;
+        border-radius: 10px;
+        margin: 1rem auto;
+    
     }
     .portafolio{
-        max-width: 900px;
-        height: 600px;
-        display: grid;
-        overflow: hidden;
-        gap: 1rem;
-        grid-template-columns: repeat(3, 1fr);
-    }
-    .emeplo{
-        width: 250px;
-    }
-    footer{
+        display: flex;
         flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        margin: 1rem 0 1rem 15rem;
-        max-width: 800px;
-        font-size: 18px;
+        max-width: 600px;
+        height: 250px; 
+        margin: 3rem auto;
+        gap: 1.5rem;
+        overflow-x: scroll;
     }
-    .foot-img{
-        padding: .25rem;
-        height: 75px;
+    .last-text{
+        margin: 1rem;
     }
-    footer>div{
-        max-width: 300px;
-        height: 200px;
-    }
-   
+    
 }
 
-/*
-imagen dar un maz width de 350px momentaneo
-mediacueri de 650px 4.5 rem padding
+@media screen and (min-width: 992px) {
+    .container{
+        margin: 1rem auto;
+        max-width: 700px;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    .nav{
+        height: 80px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    .nav-Icono{
+        display: none;
+    }
+    .nav-menu{
+        position: absolute;
+        background-color:var(--dark-blue);
+        width: 100%;
+        top: 0;
+        min-height: 80px;
+        padding: 1rem 1rem;
+        flex-direction: row;
+        justify-content:flex-end;
+        align-items: center;
+        color: var(--whity);
+        display: flex;
+        left: 0;
+        right: 1rem;
+        gap: 1rem;
+        position: fixed;
+    }
+    
+        
+      .header-information{
+            flex-direction: row-reverse;
+            margin: 0 auto;
+            text-align: center;
+            position: relative;
+      }
+      .container-img{
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        background-color: gray;
+        width: 400px;
+        height: 400px;
+        border-radius: 50%;
+        margin-bottom: 0;
+       
+    }
+
+      .header-text{
+        position:relative;
+        text-align: left;
+        margin-left: 0;    
+       
+      }
+      .header-h1{
+        border: none;
+      }
+      .header-h3{
+        border-bottom: var(--ligthy-gray) solid 2px;
+      }
+      .parrafo{
+        padding: 0;
+      }
+      .social-container{
+        justify-content: flex-start;
+        gap: 2rem;
+        text-align: center;
+      }
+
+      .cuentas{
+        height: 7rem;
+        justify-content: space-around;
+        margin-top: 0;
+      }
+      .cuentas-icon{
+        width: 7rem;
+        height: 5rem;
+      }
+      .sevis-img{
+        overflow: hidden;
+    }
+.portafolio{
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    display: grid ;
+    grid-template-columns: repeat(2, 1fr);   
+}
+.foot{
+    justify-content: space-around;
+    margin: 0 auto;
+    text-align: center;
+}
+.footer-img{
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    margin: 0 auto;
+    justify-content: space-around;
+    gap: 6rem;
+}
+.last-text{
+    margin: 1rem;
+}
+
+
+}
