--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ h3{
     padding-top: .5rem;
 }
 .img-icon{
-    width: 40px;
+    width: 30px;
 }
 .cuentas{
     min-width: 300px;
@@ -398,8 +398,25 @@ h4{
     height: auto;
     overflow: hidden;
     display: grid ;
-    grid-template-columns: repeat(2, 1fr);   
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: 
+    "uno dos"
+    "tres cuatro"
+    ;   
 }
+.uno{
+    grid-area: uno;
+}
+.dos{
+    grid-area: dos;
+}
+.tres{
+    grid-area: tres;
+}
+.cuatro{
+    grid-area: cuatro;
+}
+
 .foot{
     justify-content: space-around;
     margin: 0 auto;
