--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,6 +393,9 @@ h4{
         margin: 0 auto;
         max-width: 700px;
     }
+    .img-port{
+        width: 260px;
+    }
 .portafolio{
     width: 100%;
     height: auto;
@@ -403,6 +406,8 @@ h4{
     "uno dos"
     "tres cuatro"
     ;   
+    grid-gap: 5rem;
+    margin: 0 auto;
 }
 .uno{
     grid-area: uno;
