Redimencionamiento div-contact

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,7 @@ h4{
 .contact{
     background-color: var(--ligthy-gray);
     height: 200px;
-    width: 100%;
+    width: 270px;
     margin: 2rem auto;
     font-size: 18px;
     padding: 1rem;
