--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,11 +310,17 @@ h4{
         justify-content: center;
         text-align: center;
     }
+    body{
+        padding: 70px;
+    }
     .nav{
-        height: 80px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
+        position: fixed;
+    width: 100%;
+    top: 0;
+    height: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     }
     .nav-Icono{
         display: none;
@@ -324,8 +330,8 @@ h4{
         background-color:var(--dark-blue);
         width: 100%;
         top: 0;
-        min-height: 80px;
-        padding: 1rem 1rem;
+        min-height: 60px;
+        padding: .5rem 1rem;
         flex-direction: row;
         justify-content:flex-end;
         align-items: center;
@@ -349,18 +355,18 @@ h4{
         justify-content: center;
         align-items: center;
         background-color: gray;
-        width: 400px;
-        height: 400px;
+        width: 450px;
+        height: 430px;
         border-radius: 50%;
         margin-bottom: 0;
        
     }
 
       .header-text{
-        position:relative;
+        position: relative;
         text-align: left;
-        margin-left: 0;    
-       
+        left: 40px;
+        max-width: 200px;
       }
       .header-h1{
         border: none;
