Agregamos margin top en enlace con narv-bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+section[id]{
+    scroll-margin-top: 70px;
+}
 body{
     background-color: var(--dark-blue);
     font-family: 'Montserrat', sans-serif;
